# internal/app/usecase/user/rank/handler.go
@@ -1,0 +1,44 @@
+package rank
+
+import (
+	"github.com/gofiber/fiber/v2"
+	"github.com/google/uuid"
+)
+
+type Handler interface {
+	Handle(c *fiber.Ctx) error
+}
+
+type handler struct {
+	service Service
+}
+
+func NewHandler(service Service) Handler {
+	return &handler{service: service}
+}
+
+// @Summary Get User Rank
+// @Description Get current rank and spending progress for the last 4 months.
+// @Tags Users
+// @Produce json
+// @Security BearerAuth
+// @Success 200 {object} Response
+// @Router /v1/users/rank [get]
+func (h *handler) Handle(c *fiber.Ctx) error {
+	userIDStr, ok := c.Locals("user_id").(string)
+	if !ok {
+		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{"error": "unauthorized"})
+	}
+
+	uID, err := uuid.Parse(userIDStr)
+	if err != nil {
+		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{"error": "invalid token payload"})
+	}
+
+	resp, err := h.service.GetUserRank(c.Context(), uID)
+	if err != nil {
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{"error": err.Error()})
+	}
+
+	return c.JSON(resp)
+}
